// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships createRelationshipsNode adds value when relationshipsList is present match snapshot 1`] = `
Object {
  "edges": Object {
    "fields": Array [
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": Array [
          "test",
        ],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "source",
        "type": "string",
        "values": Array [
          "test-source",
        ],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "target",
        "type": "string",
        "values": Array [
          "test-target",
        ],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": Array [
          "Test Label ExternalId",
        ],
      },
    ],
    "meta": Object {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": Object {
    "fields": Array [
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": Array [
          "test-source",
          "test-target",
        ],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "title",
        "type": "string",
        "values": Array [
          "test source description",
          "Test Target descriptipn",
        ],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": Array [
          "Test Source",
          "Test  Target",
        ],
      },
    ],
    "meta": Object {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;

exports[`Relationships createRelationshipsNode with empty relationships list match snapshot 1`] = `
Object {
  "edges": Object {
    "fields": Array [
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": Array [],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "source",
        "type": "string",
        "values": Array [],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "target",
        "type": "string",
        "values": Array [],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": Array [],
      },
    ],
    "meta": Object {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": Object {
    "fields": Array [
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": Array [],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "title",
        "type": "string",
        "values": Array [],
      },
      Object {
        "config": Object {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": Array [],
      },
    ],
    "meta": Object {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;
